--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=backend
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username = postgres
+spring.datasource.password = mysecretpassword
+
+spring.jpa.hibernate.ddl-auto=update
