N Employees are now connected to 1 Manager.Password hashing works. Added Repo for Manager. Created a Test File for Manager

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -62,12 +62,27 @@
             <scope>provided</scope>
         </dependency>
 
+
+        <!-- Security für Hashen -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+
         <!-- Tests -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- Memory Server -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
