Login Services and Config implemented and commented

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/mage
 SPRING_DATASOURCE_USERNAME=postgres
 SPRING_DATASOURCE_PASSWORD=mysecretpassword
 TZ=Europe/Berlin
+JWT_SECRET=supergeheimerjwtkey123supergeheimerjwtkey123
