Improve auth validation and JWT config

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.security.user.name=admin
 spring.security.user.password=admin123
-spring.datasource.secret=${JWT_SECRET}
-spring.datasource.ttl=${JWT_TTL}
+jwt.secret=${JWT_SECRET:change-me-in-prod}
+jwt.ttl=${JWT_TTL:86400000}
