--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -122,6 +122,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- Swagger / OpenAPI UI -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+
 
     </dependencies>
 
