--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.5.7</version>
+        <version>3.3.9</version>
         <relativePath/>
     </parent>
 
@@ -143,7 +143,7 @@
     <build>
         <plugins>
 
-            <!-- 🧩 Compiler Plugin für Lombok + MapStruct -->
+            <!-- Compiler Plugin für Lombok + MapStruct -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
