--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,13 +3,17 @@ spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.properties.hibernate.hbm2ddl.create_namespaces=true
 spring.security.user.name=admin
 spring.security.user.password=admin123
+logging.level.org.springframework.messaging.simp=DEBUG
+logging.level.org.springframework.web.socket=DEBUG
+logging.level.com.momo.backend.config.WebSocketAuthChannelInterceptor=DEBUG
+
 
 # JWT Defaults (fallen back to env if set)
 JWT_SECRET=${JWT_SECRET:dev-test-secret-32chars-long-123456}
