--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@reduxjs/toolkit": "^2.10.1",
+    "@stomp/stompjs": "^7.2.1",
     "babel-plugin-inline-dotenv": "^1.7.0",
     "expo": "~54.0.27",
     "expo-constants": "~18.0.11",
@@ -48,11 +49,13 @@
     "react-native-worklets": "0.5.1",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
+    "sockjs-client": "^1.6.1",
     "undefined": "\\"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
     "@types/react-native": "^0.72.8",
+    "@types/sockjs-client": "^1.5.4",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
