--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,13 +20,13 @@
     "@reduxjs/toolkit": "^2.10.1",
     "@stomp/stompjs": "^7.2.1",
     "babel-plugin-inline-dotenv": "^1.7.0",
-    "expo": "~54.0.27",
-    "expo-constants": "~18.0.11",
+    "expo": "^54.0.29",
+    "expo-constants": "^18.0.12",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
     "expo-linking": "~8.0.10",
-    "expo-router": "~6.0.17",
+    "expo-router": "^6.0.19",
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
